# vISA

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.ci.yaml  compose.yaml  deny.toml  rust-toolchain.toml  rustfmt.toml
aotc/: Cargo.toml
aotc/src/: main.rs
crates/backend/substrate_host/: Cargo.toml
crates/backend/substrate_host/src/: authority.rs  binding.rs  joint.rs  journal.rs  kv.rs  lease.rs  lib.rs  logical_request.rs  regular_file.rs  tests.rs  timer.rs
crates/backend/substrate_virtio/: Cargo.toml
crates/backend/substrate_virtio/src/: block.rs  lib.rs  net.rs  page_table.rs
crates/benchmarks/visa-bench/: Cargo.toml
crates/benchmarks/visa-bench/benches/: activation_start.rs  block_iops.rs  framebuffer_throughput.rs  hostcall_latency.rs  network_throughput.rs  preemption_latency.rs  simd_context_switch.rs  simd_speedup.rs  snapshot_restore.rs
crates/benchmarks/visa-bench/src/: lib.rs
crates/benchmarks/vmos-bench/: Cargo.toml
crates/benchmarks/vmos-bench/benches/: activation_start.rs  block_iops.rs  framebuffer_throughput.rs  hostcall_latency.rs  network_throughput.rs  preemption_latency.rs  simd_context_switch.rs  simd_speedup.rs  snapshot_restore.rs
crates/benchmarks/vmos-bench/src/: lib.rs
crates/core/contract_core/: Cargo.toml
crates/core/contract_core/src/: codec.rs  lib.rs  validate.rs
crates/core/contract_core/src/tests/: mod.rs
crates/core/contract_core/tests/: release_vectors.rs
crates/core/contract_validate/: Cargo.toml
crates/core/contract_validate/src/: artifact.rs  audit.rs  contract_core_evidence.rs  lib.rs  migration.rs
crates/core/contract_validate/src/tests/: compatibility.rs  contract_core_evidence.rs  manifest_validation.rs  mod.rs  object_refs.rs  roots_block_activation.rs  roots_block_fs.rs  roots_device_io.rs  roots_guest_memory.rs  roots_network_runtime.rs  roots_network_storage.rs  roots_scheduler_smp.rs  roots_simd_display.rs
crates/core/joint_handoff_core/: Cargo.toml
crates/core/joint_handoff_core/src/: codec.rs  lib.rs  reducer.rs  tests.rs  types.rs
crates/core/joint_handoff_core/tests/: release_vectors.rs
crates/host/aotc/: Cargo.toml
crates/host/aotc/src/: main.rs
crates/host/kernel/: Cargo.toml  build.rs
crates/host/kernel/src/: interrupts.rs  log.rs  main.rs  serial.rs  user_mode.rs
crates/host/kernel/src/frontends/: mod.rs
crates/host/kernel/src/substrate/: dmw.rs  mod.rs
crates/host/kernel/src/supervisor/: artifacts.rs  authority.rs  boundary.rs  demos.rs  events.rs  fault.rs  guest_memory.rs  linux.rs  linux_bpf.rs  linux_clock_dispatch.rs  linux_close_range_dispatch.rs  linux_fd.rs  (+28 more)
crates/host/osctl/: Cargo.toml
crates/host/osctl-view/: Cargo.toml
crates/host/osctl-view/src/: inspect.rs  lib.rs  replay.rs
crates/host/osctl/src/: cli.rs  inspect.rs  lib.rs  main.rs  replay.rs
crates/host/runner/: Cargo.toml  build.rs
crates/host/runner/src/: main.rs
crates/host/visa_cli/: Cargo.toml  README.md
crates/host/visa_cli/src/: cohort.rs  lib.rs  main.rs  systemd_activation.rs
crates/host/visa_cli/tests/: private_bus.rs
crates/oracle/semantic_core/: Cargo.toml
crates/oracle/semantic_core/src/: boundary.rs  contract_graph.rs  event_log.rs  ids.rs  lib.rs  memory_boundary.rs
crates/oracle/visa-conformance/: Cargo.toml  README.md
crates/oracle/visa-conformance/src/: artifacts.rs  catalog.rs  evidence_matrix.rs  lib.rs  performance.rs  tests.rs  types.rs  validation.rs
crates/oracle/visa_runtime/: Cargo.toml
crates/oracle/visa_runtime/src/: lib.rs
crates/oracle/visa_wasmtime/: Cargo.toml
crates/oracle/visa_wasmtime/src/: lib.rs
crates/runtime/target_executor/: Cargo.toml
crates/runtime/target_executor/src/: host_tap_runtime.rs  lib.rs  main.rs  runtime.rs
crates/runtime/visa_agent_store/: Cargo.toml  README.md
crates/runtime/visa_agent_store/src/: lib.rs  tests.rs
crates/runtime/visa_component_adapter/: Cargo.toml
crates/runtime/visa_component_adapter/src/: error.rs  host.rs  lib.rs  lifecycle.rs  logical_request_state.rs  regular_file_state.rs  state.rs  types.rs
crates/runtime/visa_durable_sqlite/: Cargo.toml  README.md
crates/runtime/visa_durable_sqlite/src/: lib.rs  tests.rs
crates/runtime/visa_jco_node/: Cargo.toml
crates/runtime/visa_jco_node/src/: adapter.rs  carrier.rs  driver.mjs  error.rs  lib.rs  node.rs  preflight.mjs  preflight.rs  process.rs  protocol.rs
crates/runtime/visa_joint_handoff/: Cargo.toml
crates/runtime/visa_joint_handoff/src/: durable.rs  durable_projection.rs  durable_tests.rs  lib.rs  projection.rs  tests.rs  verified.rs
crates/runtime/visa_nexus_service/: Cargo.toml  README.md
crates/runtime/visa_nexus_service/src/: lib.rs  tests.rs
crates/runtime/visa_ownership_service/: Cargo.toml  README.md
crates/runtime/visa_ownership_service/src/: lib.rs  proposal.rs  receipt.rs  state.rs  store.rs  tests.rs
kernel/: Cargo.toml  build.rs
kernel/src/: debugcon.rs  demo.rs  interrupts.rs  log.rs  main.rs  qemu.rs  serial.rs  user_mode.rs
kernel/src/frontends/linux_elf/: bridge.rs  context.rs  loader.rs
kernel/src/substrate/: dmw.rs  mod.rs
kernel/src/substrate/ring3/: entry.rs
kernel/src/supervisor/: artifacts.rs  authority.rs  authority_rebind.rs  boundary.rs  demos.rs  engine.rs  events.rs  fault.rs  linux.rs  linux_dispatch.rs  linux_epoll_dispatch.rs  linux_fd.rs  linux_fs_dispatch.rs  linux_memory_dispatch.rs  linux_native.rs  linux_socket_dispatch.rs  linux_wait_dispatch.rs  mod.rs  net.rs  pulse.rs  recovery.rs  runtime.rs  scheduler.rs  semantic.rs  store.rs  store_manager.rs  types.rs  wait.rs  wasm.rs
kernel/src/supervisor/engine/: adapter.rs  api.rs  contract.rs  legacy_stub.rs  mod.rs  state.rs  wasmi_backend.rs
kernel/src/supervisor/services/: console.rs  devfs.rs  driver_virtio_net.rs  epoll.rs  futex.rs  linux_socket.rs  mod.rs  native.rs  native_network.rs  net_core.rs  procfs.rs  replay_snapshot.rs  vfs.rs  wasm_app.rs
osctl/: Cargo.toml
osctl/src/: main.rs
target_executor/: Cargo.toml
target_executor/src/: main.rs  runtime.rs
(+1462 files in other folders)
