[workspace]
resolver = "3"
members = [
    "aotc",
    "abi",
    "artifact_manifest",
    "console_service",
    "contract_core",
    "devfs_service",
    "epoll_service",
    "futex_service",
    "kernel",
    "linux_user_demo",
    "linux_socket_service",
    "linux_syscall",
    "net_core",
    "driver_virtio_net",
    "osctl",
    "procfs_service",
    "replay_snapshot",
    "runner",
    "semantic_core",
    "service_core",
    "substrate_api",
    "substrate_virtio",
    "supervisor_catalog",
    "target_abi",
    "target_executor",
    "vfs_service",
    "wasm_app",
]

[workspace.dependencies]
artifact_manifest = { path = "artifact_manifest" }
bootloader_api = "0.11.15"
contract_core = { path = "contract_core" }
hex = "0.4.3"
linked_list_allocator = "0.10.6"
pic8259 = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semantic_core = { path = "semantic_core" }
service_core = { path = "service_core" }
substrate_api = { path = "substrate_api" }
substrate_virtio = { path = "substrate_virtio" }
sha2 = "0.10"
spin = "0.9.8"
supervisor_catalog = { path = "supervisor_catalog" }
target_abi = { path = "target_abi", default-features = false }
uart_16550 = "0.3.2"
vmos_abi = { path = "abi" }
wasmtime = { version = "43.0.0", default-features = false }
x86_64 = { version = "0.15.4", default-features = false, features = ["abi_x86_interrupt", "instructions"] }
xmas-elf = { version = "0.9.1", default-features = false }

[profile.dev]
debug = 0
panic = "abort"

[profile.release]
panic = "abort"
