[workspace]
resolver = "3"
members = [
    "crates/abi/abi",
    "crates/core/artifact_manifest",
    "crates/core/contract_core",
    "crates/core/contract_validate",
    "crates/core/semantic_core",
    "crates/core/target_abi",
    "crates/core/visa_profile",
    "crates/oracle/contract_core",
    "crates/oracle/visa-conformance",
    "crates/oracle/semantic_core",
    "crates/oracle/substrate_api",
    "crates/oracle/replay_snapshot",
    "crates/oracle/visa_profile",
    "crates/oracle/visa_runtime",
    "crates/oracle/visa_wasmtime",
    "crates/oracle/wasm_app",
    "crates/host/aotc",
    "crates/host/kernel",
    "crates/host/osctl-cli",
    "crates/host/osctl-view",
    "crates/host/runner",
    "crates/runtime/service_core",
    "crates/runtime/supervisor_catalog",
    "crates/runtime/target_executor",
    "crates/runtime/visa_runtime",
    "crates/runtime/visa_component_adapter",
    "crates/runtime/visa_jco_node",
    "crates/runtime/visa_wacogo",
    "crates/runtime/visa_wasmtime",
    "crates/backend/substrate_api",
    "crates/backend/substrate_host",
    "crates/backend/substrate_virtio",
    "crates/testing/visa-conformance",
    "crates/testing/handoff-component",
    "crates/testing/visa-system",
    "crates/services/console_service",
    "crates/services/devfs_service",
    "crates/services/driver_virtio_net",
    "crates/services/epoll_service",
    "crates/services/fs_adapter",
    "crates/services/futex_service",
    "crates/services/linux_socket_service",
    "crates/services/linux_syscall",
    "crates/services/linux_user_demo",
    "crates/services/net_core",
    "crates/services/net_stack_adapter",
    "crates/services/procfs_service",
    "crates/services/vfs_service",
    "crates/benchmarks/visa-bench",
]

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
artifact_manifest = { path = "crates/core/artifact_manifest" }
bootloader_api = "0.11.15"
contract_core = { path = "crates/core/contract_core" }
contract_validate = { path = "crates/core/contract_validate" }
fatfs = "0.3.6"
ext4-view = "0.9.3"
hex = "0.4.3"
linked_list_allocator = "0.10.6"
pic8259 = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_ignored = "0.1.12"
serde_json = "1.0"
semantic_core = { path = "crates/core/semantic_core" }
service_core = { path = "crates/runtime/service_core" }
fs_adapter = { path = "crates/services/fs_adapter" }
net_stack_adapter = { path = "crates/services/net_stack_adapter" }
osctl-view = { path = "crates/host/osctl-view" }
smoltcp = { version = "0.13.0", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-tcp"] }
substrate_api = { path = "crates/backend/substrate_api" }
substrate_virtio = { path = "crates/backend/substrate_virtio" }
criterion = "0.5"
sha2 = "0.10"
spin = "0.9.8"
supervisor_catalog = { path = "crates/runtime/supervisor_catalog" }
target_abi = { path = "crates/core/target_abi", default-features = false }
uart_16550 = "0.3.2"
visa_profile = { path = "crates/core/visa_profile" }
visa_runtime = { path = "crates/runtime/visa_runtime" }
visa_component_adapter = { path = "crates/runtime/visa_component_adapter" }
visa_jco_node = { path = "crates/runtime/visa_jco_node" }
visa_wacogo = { path = "crates/runtime/visa_wacogo" }
visa_wasmtime = { path = "crates/runtime/visa_wasmtime" }
visa_abi = { path = "crates/abi/abi" }
wasmtime = { version = "43.0.2", default-features = false }
x86_64 = { version = "0.15.4", default-features = false, features = ["abi_x86_interrupt", "instructions"] }
xmas-elf = { version = "0.10.0", default-features = false }

[profile.dev]
debug = 0
panic = "abort"

[profile.release]
panic = "abort"
