[package]
name = "aotc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aotc"
path = "src/main.rs"

[dependencies]
artifact_manifest.workspace = true
hex.workspace = true
serde_json.workspace = true
sha2.workspace = true
supervisor_catalog.workspace = true
wasmtime = { workspace = true, features = ["runtime", "cranelift"] }
