[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
bootloader_api.workspace = true
linked_list_allocator.workspace = true
pic8259.workspace = true
spin.workspace = true
uart_16550.workspace = true
vmos_abi.workspace = true
wasmi.workspace = true
x86_64.workspace = true
xmas-elf.workspace = true
