[package]
name = "target_executor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "target_executor"
path = "src/main.rs"

[dependencies]
artifact_manifest.workspace = true
contract_core.workspace = true
hex.workspace = true
semantic_core.workspace = true
serde_json.workspace = true
service_core.workspace = true
sha2.workspace = true
substrate_api.workspace = true
supervisor_catalog.workspace = true
target_abi.workspace = true
wasmtime = { workspace = true, features = ["runtime", "std"] }
