[package]
name = "substrate_host"
version = "0.1.0"
publish = false
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
test-control = []

[dependencies]
contract_core = { path = "../../core/contract_core" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
substrate_api = { path = "../substrate_api" }
