[package]
name = "substrate_virtio"
version = "0.1.0"
publish = false
edition = "2024"

[features]
default = []
host-tap = ["dep:libc"]

[dependencies]
libc = { version = "0.2", optional = true }
substrate_api = { package = "substrate-oracle", path = "../../oracle/substrate_api" }

[dev-dependencies]
substrate_api = { package = "substrate-oracle", path = "../../oracle/substrate_api", features = ["conformance"] }
