[package]
name = "vmos-bench"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "vmos_bench"
path = "src/lib.rs"

[[bench]]
name = "block_iops"
harness = false

[[bench]]
name = "network_throughput"
harness = false

[[bench]]
name = "simd_context_switch"
harness = false

[[bench]]
name = "preemption_latency"
harness = false

[dependencies]
semantic_core.workspace = true

[dev-dependencies]
criterion = "0.5"
