[package]
license.workspace = true
name = "contract_core"
version = "0.3.0"
publish = false
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
postcard = { version = "=1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10", default-features = false }
