[package]
name = "contract_validate"
version = "0.1.0"
publish = false
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
artifact_manifest.workspace = true
contract_core.workspace = true
hex.workspace = true
service_core.workspace = true
sha2.workspace = true
substrate_api.workspace = true
supervisor_catalog.workspace = true
