[package]
name = "joint_handoff_core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
contract_core = { path = "../contract_core" }
postcard = { version = "=1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10", default-features = false }
