[package]
name = "aotc"
version = "0.1.0"
publish = false
edition = "2024"

[[bin]]
name = "aotc"
path = "src/main.rs"

[dependencies]
artifact_manifest.workspace = true
contract_core.workspace = true
contract_validate.workspace = true
hex.workspace = true
serde_json.workspace = true
service_core.workspace = true
sha2.workspace = true
supervisor_catalog.workspace = true
target_abi = { workspace = true, features = ["hash"] }
wasmtime = { workspace = true, features = ["runtime", "cranelift"] }
