[package]
name = "kernel"
version = "0.1.0"
publish = false
edition = "2024"
build = "build.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
bootloader_api.workspace = true
linked_list_allocator.workspace = true
pic8259.workspace = true
semantic_core.workspace = true
service_core.workspace = true
spin.workspace = true
supervisor_catalog.workspace = true
uart_16550.workspace = true
vmos_abi.workspace = true
x86_64.workspace = true
xmas-elf.workspace = true

[build-dependencies]
contract_validate.workspace = true
hex.workspace = true
sha2.workspace = true
supervisor_catalog.workspace = true
