[package]
license.workspace = true
name = "kernel"
version = "0.1.0"
publish = false
edition = "2024"
build = "build.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
bootloader_api.workspace = true
linked_list_allocator.workspace = true
net_stack_adapter.workspace = true
pic8259.workspace = true
semantic_core = { package = "semantic-oracle", path = "../../oracle/semantic_core" }
service_core = { workspace = true, features = ["seccomp-filter"] }
spin.workspace = true
substrate_api = { package = "substrate-oracle", path = "../../oracle/substrate_api" }
substrate_virtio.workspace = true
supervisor_catalog.workspace = true
uart_16550.workspace = true
visa_abi.workspace = true
x86_64.workspace = true
xmas-elf.workspace = true

[build-dependencies]
contract_validate.workspace = true
hex.workspace = true
sha2.workspace = true
supervisor_catalog.workspace = true
