[package]
name = "osctl-view"
version = "0.1.0"
publish = false
edition = "2024"

[dependencies]
artifact_manifest.workspace = true
contract_core.workspace = true
contract_validate.workspace = true
semantic_core.workspace = true
serde_json.workspace = true
service_core.workspace = true
supervisor_catalog.workspace = true
visa_profile.workspace = true
