[package]
name = "visa-cli"
version = "0.1.0"
edition = "2024"
license.workspace = true
readme = "README.md"
publish = false

[[bin]]
name = "visa"
path = "src/main.rs"

[dependencies]
rustix = { version = "=1.1.4", features = ["fs", "process", "rand"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_json_canonicalizer = "=0.3.2"
visa_agent_store = { path = "../../runtime/visa_agent_store" }
visa_durable_sqlite = { path = "../../runtime/visa_durable_sqlite" }
visa_local_rpc = { path = "../../core/visa_local_rpc" }

[dev-dependencies]
tempfile = "=3.27.0"
