[package]
license.workspace = true
name = "wasmtime-oracle"
version = "0.1.0"
publish = false
edition = "2024"

[package.metadata.visa]
role = "comparison-oracle"

[lib]
path = "src/lib.rs"

[dependencies]
contract_core = { package = "contract-oracle", path = "../contract_core" }
semantic_core = { package = "semantic-oracle", path = "../semantic_core" }
substrate_api = { package = "substrate-oracle", path = "../substrate_api" }
target_abi = { workspace = true, features = ["hash"] }
visa_profile = { package = "profile-oracle", path = "../visa_profile" }
visa_runtime = { package = "runtime-oracle", path = "../visa_runtime" }
wasmtime = { workspace = true, features = ["cranelift", "runtime", "std"] }

[dev-dependencies]
wat = "1"
sha2.workspace = true
visa-conformance = { package = "conformance-oracle", path = "../visa-conformance" }
