[package]
name = "target_executor"
version = "0.1.0"
publish = false
edition = "2024"

[[bin]]
name = "target_executor"
path = "src/main.rs"

[dependencies]
artifact_manifest.workspace = true
contract_core.workspace = true
contract_validate.workspace = true
fs_adapter.workspace = true
hex.workspace = true
net_stack_adapter.workspace = true
semantic_core.workspace = true
serde_json.workspace = true
service_core.workspace = true
sha2.workspace = true
substrate_api.workspace = true
substrate_virtio.workspace = true
supervisor_catalog.workspace = true
target_abi = { workspace = true, features = ["hash"] }
vms_runtime.workspace = true
wasmtime = { workspace = true, features = ["runtime", "std"] }
