[package]
license.workspace = true
name = "target_executor"
version = "0.1.0"
publish = false
edition = "2024"

[features]
default = []
host-tap = ["substrate_virtio/host-tap"]

[[bin]]
name = "target_executor"
path = "src/main.rs"

[dependencies]
artifact_manifest.workspace = true
contract_core = { package = "contract-oracle", path = "../../oracle/contract_core" }
contract_validate.workspace = true
fs_adapter.workspace = true
hex.workspace = true
net_stack_adapter.workspace = true
semantic_core = { package = "semantic-oracle", path = "../../oracle/semantic_core" }
serde_json.workspace = true
service_core.workspace = true
sha2.workspace = true
substrate_api = { package = "substrate-oracle", path = "../../oracle/substrate_api" }
substrate_virtio.workspace = true
supervisor_catalog.workspace = true
target_abi = { workspace = true, features = ["hash"] }
visa_profile = { package = "profile-oracle", path = "../../oracle/visa_profile" }
visa_runtime = { package = "runtime-oracle", path = "../../oracle/visa_runtime" }
wasmtime = { workspace = true, features = ["runtime", "std"] }

[dev-dependencies]
visa_wasmtime = { package = "wasmtime-oracle", path = "../../oracle/visa_wasmtime" }
wat = "1"
