[package]
name = "visa_agent_store"
version = "0.1.0"
edition = "2024"
license.workspace = true
readme = "README.md"
publish = false

[dependencies]
rusqlite = { version = "=0.40.1", features = ["bundled"] }
rustix = { version = "=1.1.4", features = ["fs", "process"] }
visa_durable_sqlite = { path = "../visa_durable_sqlite" }
visa_local_rpc = { path = "../../core/visa_local_rpc" }

[dev-dependencies]
tempfile = "=3.27.0"
