[package]
name = "visa_nexus_service"
version = "0.1.0"
edition = "2024"
license.workspace = true
readme = "README.md"
publish = false

[dependencies]
postcard = { version = "=1.1.3", default-features = false, features = ["alloc"] }
rusqlite = { version = "=0.40.1", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
visa_durable_sqlite = { path = "../visa_durable_sqlite" }
visa_local_rpc = { path = "../../core/visa_local_rpc" }

[dev-dependencies]
tempfile = "=3.27.0"
