[package]
name = "visa_ownership_service"
version = "0.1.0"
edition = "2024"
license.workspace = true
readme = "README.md"
publish = false

[dependencies]
contract_core.workspace = true
joint_handoff_core.workspace = true
rusqlite = { version = "=0.40.1", features = ["bundled"] }
rustix = { version = "=1.1.4", features = ["fs", "process"] }
serde = { version = "=1.0.228", features = ["derive"] }
visa_local_rpc = { path = "../../core/visa_local_rpc" }
visa_durable_sqlite = { path = "../visa_durable_sqlite" }

[dev-dependencies]
tempfile = "=3.27.0"
